--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#presunto" aria-controls="presunto" role="tab" data-toggle="tab" aria-selected="false">Presunto</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#lombo" aria-controls="lombo" role="tab" data-toggle="tab" aria-selected="false">Lombo</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#doces" aria-controls="doces" role="tab" data-toggle="tab" aria-selected="false">Doces</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="#bordas" aria-controls="bordas" role="tab" data-toggle="tab" aria-selected="false">Bordas</a></li>
             </ul>
 
             <!-- Tab panes -->
@@ -1521,6 +1522,227 @@
 <!--/FIM DA ABA DOCES -->
 
 
+<!--/ABA BORDAS -->
+<div role="tabpanel" class="tab-pane fade" id="bordas">
+  <div class="row">
+   <div class="col-md-6 mb20">
+     <article class="media">
+       <!-- Article Image -->
+       <a class="g-width-100">
+           <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-bacon.jpg" alt="Menu title">
+       </a>
+       <!--Image -->
+       <!--Content -->
+       <div class="media-body align-self-center g-pl-10">
+           <div class="d-flex justify-content-between mb10">
+               <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Brigadeiro</h3>
+
+               <div class="align-self-center">
+                   <strong class="text-white font700">R$33,00</strong>
+               </div>
+           </div>
+
+           <p class="mb-0">chocolate ao leite com granulados</p>
+       </div>
+       <!--/Content -->
+   </article><!--/Article -->
+
+
+   <article class="media">
+     <!-- Article Image -->
+     <a class="g-width-100">
+         <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
+     </a>
+     <!--Image -->
+     <!--Content -->
+     <div class="media-body align-self-center g-pl-10">
+         <div class="d-flex justify-content-between mb10">
+             <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Confete</h3>
+
+             <div class="align-self-center">
+                 <strong class="text-white font700">R$33,00</strong>
+             </div>
+         </div>
+         <p class="mb-0">chocolate ao leite com confete</p>
+     </div>
+     <!--/Content -->
+ </article><!--/Article -->
+
+
+ <article class="media">
+   <!-- Article Image -->
+   <a class="g-width-100">
+       <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-bacon.jpg" alt="Menu title">
+   </a>
+   <!--Image -->
+   <!--Content -->
+   <div class="media-body align-self-center g-pl-10">
+       <div class="d-flex justify-content-between mb10">
+           <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Bis</h3>
+
+           <div class="align-self-center">
+               <strong class="text-white font700">R$33,00</strong>
+           </div>
+       </div>
+       <p class="mb-0">chocolate ao leite ou branco com bis</p>
+   </div>
+   <!--/Content -->
+</article><!--/Article --> 
+
+<article class="media">
+<!-- Article Image -->
+<a class="g-width-100">
+    <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
+</a>
+<!--Image -->
+<!--Content -->
+<div class="media-body align-self-center g-pl-10">
+    <div class="d-flex justify-content-between mb10">
+        <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Due C/ Morango</h3>
+
+        <div class="align-self-center">
+            <strong class="text-white font700">R$33,00</strong>
+        </div>
+    </div>
+    <p class="mb-0">chocolate ao leite, chocolate branco e morangos</p>
+</div>
+<!--/Content -->
+</article><!--/Article -->
+
+<article class="media">
+<!-- Article Image -->
+<a class="g-width-100">
+  <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
+</a>
+<!--Image -->
+<!--Content -->
+<div class="media-body align-self-center g-pl-10">
+  <div class="d-flex justify-content-between mb10">
+      <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Morango</h3>
+
+      <div class="align-self-center">
+          <strong class="text-white font700">R$33,00</strong>
+      </div>
+  </div>
+  <p class="mb-0">chocolate ao leite ou chocolate branco e morangos</p>
+</div>
+<!--/Content -->
+</article><!--/Article -->
+   </div>
+
+
+<!--/DIREITA DOCES -->
+
+     <div class="col-md-6 mb20">
+       <article class="media">
+         <!-- Article Image -->
+         <a class="g-width-100">
+             <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
+         </a>
+         <!--Image -->
+         <!--Content -->
+         <div class="media-body align-self-center g-pl-10">
+             <div class="d-flex justify-content-between mb10">
+                 <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Abacaxi</h3>
+
+                 <div class="align-self-center">
+                     <strong class="text-white font700">R$33,00</strong>
+                 </div>
+             </div>
+             <p class="mb-0">abacaxi com canela, chocolate branco ou chocolate ao leite</p>
+         </div>
+         <!--/Content -->
+     </article><!--/Article --> 
+
+     <article class="media">
+       <!-- Article Image -->
+       <a class="g-width-100">
+           <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
+       </a>
+       <!--Image -->
+       <!--Content -->
+       <div class="media-body align-self-center g-pl-10">
+           <div class="d-flex justify-content-between mb10">
+               <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Banana</h3>
+
+               <div class="align-self-center">
+                   <strong class="text-white font700">R$33,00</strong>
+               </div>
+           </div>
+           <p class="mb-0">banana com canela, chocolate branco ou chocolate ao leite</p>
+       </div>
+       <!--/Content -->
+   </article><!--/Article --> 
+
+
+   <article class="media">
+    <!-- Article Image -->
+    <a class="g-width-100">
+        <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
+    </a>
+    <!--Image -->
+    <!--Content -->
+    <div class="media-body align-self-center g-pl-10">
+        <div class="d-flex justify-content-between mb10">
+            <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Doce de Leite</h3>
+
+            <div class="align-self-center">
+                <strong class="text-white font700">R$33,00</strong>
+            </div>
+        </div>
+        <p class="mb-0">doce de leite e castanha de caju moída</p>
+    </div>
+    <!--/Content -->
+</article><!--/Article -->
+
+
+<article class="media">
+  <!-- Article Image -->
+  <a class="g-width-100">
+      <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
+  </a>
+  <!--Image -->
+  <!--Content -->
+  <div class="media-body align-self-center g-pl-10">
+      <div class="d-flex justify-content-between mb10">
+          <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Romeu e Julieta</h3>
+
+          <div class="align-self-center">
+              <strong class="text-white font700">R$33,00</strong>
+          </div>
+      </div>
+      <p class="mb-0">goiabada e cream cheese</p>
+  </div>
+  <!--/Content -->
+</article><!--/Article -->
+
+
+<article class="media">
+  <!-- Article Image -->
+  <a class="g-width-100">
+      <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
+  </a>
+  <!--Image -->
+  <!--Content -->
+  <div class="media-body align-self-center g-pl-10">
+      <div class="d-flex justify-content-between mb10">
+          <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Salada de Frutas</h3>
+
+          <div class="align-self-center">
+              <strong class="text-white font700">R$33,00</strong>
+          </div>
+      </div>
+      <p class="mb-0">banana, abacaxi, morango e kiwi com chocolate branco ou chocolate ao leite</p>
+  </div>
+  <!--/Content -->
+</article><!--/Article -->
+             
+   </div>
+</div>
+</div> 
+<!--/FIM DA ABA BORDAS -->
+
+
             </div>
         </div>
     </div>
@@ -1635,7 +1857,7 @@
             <div class="box" data-aos="zoom-in" data-aos-delay="300">
               <span>03</span>
               <h4>Medidas de Saúde</h4>
-              <p>Tomamos todas as cuidados necessárias para a prevenção da covid</p>
+              <p>Tomamos todas os cuidados necessárias para a prevenção da covid</p>
             </div>
           </div>
 
@@ -1881,7 +2103,7 @@
             </div>
           </div>
           <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Menssagem"></textarea>
+            <textarea class="form-control" name="message" rows="5" placeholder="Mensagem"></textarea>
             <div class="validate"></div>
           </div>
           <div class="mb-3">
