--- a/index.html
+++ b/index.html
@@ -1535,7 +1535,7 @@
        <!--Content -->
        <div class="media-body align-self-center g-pl-10">
            <div class="d-flex justify-content-between mb10">
-               <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Brigadeiro</h3>
+               <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Borda Comun</h3>
 
                <div class="align-self-center">
                    <strong class="text-white font700">R$33,00</strong>
@@ -1631,7 +1631,7 @@
    </div>
 
 
-<!--/DIREITA DOCES -->
+<!--/DIREITA BORDAS -->
 
      <div class="col-md-6 mb20">
        <article class="media">
