--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#lombo" aria-controls="lombo" role="tab" data-toggle="tab" aria-selected="false">Lombo</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#doces" aria-controls="doces" role="tab" data-toggle="tab" aria-selected="false">Doces</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#bordas" aria-controls="bordas" role="tab" data-toggle="tab" aria-selected="false">Bordas</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="#bebidas" aria-controls="bebidas" role="tab" data-toggle="tab" aria-selected="false">Bebidas</a></li>
             </ul>
 
             <!-- Tab panes -->
@@ -1535,14 +1536,14 @@
        <!--Content -->
        <div class="media-body align-self-center g-pl-10">
            <div class="d-flex justify-content-between mb10">
-               <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Borda Comun</h3>
+               <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Borda Simples</h3>
 
                <div class="align-self-center">
-                   <strong class="text-white font700">R$33,00</strong>
+                   <strong class="text-white font700">R$5,00</strong>
                </div>
            </div>
 
-           <p class="mb-0">chocolate ao leite com granulados</p>
+           <p class="mb-0">catupiry, cheddar, cream cheese, calabresa, presunto, misto quente ou chocolate</p>
        </div>
        <!--/Content -->
    </article><!--/Article -->
@@ -1557,13 +1558,13 @@
      <!--Content -->
      <div class="media-body align-self-center g-pl-10">
          <div class="d-flex justify-content-between mb10">
-             <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Confete</h3>
+             <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Borda Vulcão</h3>
 
              <div class="align-self-center">
-                 <strong class="text-white font700">R$33,00</strong>
+                 <strong class="text-white font700">R$13,00</strong>
              </div>
          </div>
-         <p class="mb-0">chocolate ao leite com confete</p>
+         <p class="mb-0">catupiry, cheddar, cream cheese, calabresa, presunto, misto quente ou chocolate</p>
      </div>
      <!--/Content -->
  </article><!--/Article -->
@@ -1578,56 +1579,18 @@
    <!--Content -->
    <div class="media-body align-self-center g-pl-10">
        <div class="d-flex justify-content-between mb10">
-           <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Bis</h3>
+           <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Borda Pãozinho</h3>
 
            <div class="align-self-center">
-               <strong class="text-white font700">R$33,00</strong>
+               <strong class="text-white font700">R$15,00</strong>
            </div>
        </div>
-       <p class="mb-0">chocolate ao leite ou branco com bis</p>
+       <p class="mb-0">catupiry, cheddar, cream cheese, calabresa, presunto, misto quente ou chocolate</p>
    </div>
    <!--/Content -->
 </article><!--/Article --> 
 
-<article class="media">
-<!-- Article Image -->
-<a class="g-width-100">
-    <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
-</a>
-<!--Image -->
-<!--Content -->
-<div class="media-body align-self-center g-pl-10">
-    <div class="d-flex justify-content-between mb10">
-        <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Due C/ Morango</h3>
 
-        <div class="align-self-center">
-            <strong class="text-white font700">R$33,00</strong>
-        </div>
-    </div>
-    <p class="mb-0">chocolate ao leite, chocolate branco e morangos</p>
-</div>
-<!--/Content -->
-</article><!--/Article -->
-
-<article class="media">
-<!-- Article Image -->
-<a class="g-width-100">
-  <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
-</a>
-<!--Image -->
-<!--Content -->
-<div class="media-body align-self-center g-pl-10">
-  <div class="d-flex justify-content-between mb10">
-      <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Morango</h3>
-
-      <div class="align-self-center">
-          <strong class="text-white font700">R$33,00</strong>
-      </div>
-  </div>
-  <p class="mb-0">chocolate ao leite ou chocolate branco e morangos</p>
-</div>
-<!--/Content -->
-</article><!--/Article -->
    </div>
 
 
@@ -1643,99 +1606,19 @@
          <!--Content -->
          <div class="media-body align-self-center g-pl-10">
              <div class="d-flex justify-content-between mb10">
-                 <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Abacaxi</h3>
+                 <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Bordas Especiais</h3>
 
                  <div class="align-self-center">
-                     <strong class="text-white font700">R$33,00</strong>
+                     <strong class="text-white font700">R$23,00</strong>
                  </div>
              </div>
-             <p class="mb-0">abacaxi com canela, chocolate branco ou chocolate ao leite</p>
+             <p class="mb-0">- Borda Coxinha</p>
+             <p class="mb-0">- Borda Pão de Queijo</p>
+             <p class="mb-0">- Borda Sonho de Valsa</p>
+             <p class="mb-0">- Borda Vulcão de Sorvete - somente no local</p>
          </div>
          <!--/Content -->
-     </article><!--/Article --> 
-
-     <article class="media">
-       <!-- Article Image -->
-       <a class="g-width-100">
-           <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
-       </a>
-       <!--Image -->
-       <!--Content -->
-       <div class="media-body align-self-center g-pl-10">
-           <div class="d-flex justify-content-between mb10">
-               <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Banana</h3>
-
-               <div class="align-self-center">
-                   <strong class="text-white font700">R$33,00</strong>
-               </div>
-           </div>
-           <p class="mb-0">banana com canela, chocolate branco ou chocolate ao leite</p>
-       </div>
-       <!--/Content -->
-   </article><!--/Article --> 
-
-
-   <article class="media">
-    <!-- Article Image -->
-    <a class="g-width-100">
-        <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
-    </a>
-    <!--Image -->
-    <!--Content -->
-    <div class="media-body align-self-center g-pl-10">
-        <div class="d-flex justify-content-between mb10">
-            <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Doce de Leite</h3>
-
-            <div class="align-self-center">
-                <strong class="text-white font700">R$33,00</strong>
-            </div>
-        </div>
-        <p class="mb-0">doce de leite e castanha de caju moída</p>
-    </div>
-    <!--/Content -->
-</article><!--/Article -->
-
-
-<article class="media">
-  <!-- Article Image -->
-  <a class="g-width-100">
-      <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
-  </a>
-  <!--Image -->
-  <!--Content -->
-  <div class="media-body align-self-center g-pl-10">
-      <div class="d-flex justify-content-between mb10">
-          <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Romeu e Julieta</h3>
-
-          <div class="align-self-center">
-              <strong class="text-white font700">R$33,00</strong>
-          </div>
-      </div>
-      <p class="mb-0">goiabada e cream cheese</p>
-  </div>
-  <!--/Content -->
-</article><!--/Article -->
-
-
-<article class="media">
-  <!-- Article Image -->
-  <a class="g-width-100">
-      <img class="img-fluid mr-4" width="80" src="assets/img/menu/pizza-calabresa.jpg" alt="Menu title">
-  </a>
-  <!--Image -->
-  <!--Content -->
-  <div class="media-body align-self-center g-pl-10">
-      <div class="d-flex justify-content-between mb10">
-          <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Salada de Frutas</h3>
-
-          <div class="align-self-center">
-              <strong class="text-white font700">R$33,00</strong>
-          </div>
-      </div>
-      <p class="mb-0">banana, abacaxi, morango e kiwi com chocolate branco ou chocolate ao leite</p>
-  </div>
-  <!--/Content -->
-</article><!--/Article -->
+     
              
    </div>
 </div>
