--- a/index.html
+++ b/index.html
@@ -2345,8 +2345,8 @@
           <h2>Reservas</h2>
           <p>Faça sua reserva</p>
         </div>
-
-        <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100" >
+        <form class="book-a-table" name="reserva" method="POST" novalidate="novalidate" netlify >
+        <!-- <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100" ></form> -->
           <div class="row">
             <div class="col-lg-4 col-md-6 form-group">
               <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
@@ -2377,11 +2377,7 @@
             <textarea class="form-control" name="message" rows="5" placeholder="Mensagem"></textarea>
             <div class="validate"></div>
           </div>
-          <div class="mb-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your booking request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
-          </div>
+          
           <div class="text-center"><button type="submit">Agendar</button></div>
         </form>
 
