--- a/index.html
+++ b/index.html
@@ -2077,21 +2077,16 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Cada fatia um pedaço de amor e dedicação</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Pizzas di Maria nasceu há mais de 10 anos com Maria e sua vontade de construir um delivery na cidade de Analândia - SP Quando a internet era tudo mato e as informações eram mais difíceis de serem veiculadas começamos uma jornada de ir até as pizzarias na Capital, nas cidades do interior próximas de nós e assim construiu-se o primeiro dick pizza da Estância climática. Anos se passaram e a ida e vinda das coisa levou a construção de nossa pizzaria hoje. Estamos sempre buscando saberes e novidades para trazer e veicular para todos nós, com uma equipe formada por mulheres e pessoas comprometidas, fazemos pizza com muito amor e carinho 
             </p>
-            <ul>
+            <!-- <ul>
               <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
               <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li> -->
             </ul>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
-            </p>
+            
           </div>
         </div>
 
@@ -2112,7 +2107,7 @@
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>01</span>
               <h4>Produtos de Qualidade</h4>
-              <p>As nossas pizzas são feitas com produtos de originais e de qualidade</p>
+              <p>As nossas pizzas são feitas com produtos originais e de qualidade</p>
             </div>
           </div>
 
