--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
   <div id="cardapio" pclass="menu section-bg " data-aos="fade-up"></div>
     <div class="section-title mt-5 text-center">
       <p>Cardápio</p>
+      <h5>Consultar preços pelo telefone ou app</h5>
     </div>
     <div class="food-menu-card">
         <div>
@@ -154,9 +155,7 @@
                                     <div class="d-flex justify-content-between mb10">
                                         <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Bacon</h3>
 
-                                        <div class="align-self-center">
-                                            <strong class="text-white font700">R$35,00</strong>
-                                        </div>
+                                        
                                     </div>
 
                                     <p class="mb-0">mussarela, bacon e tomate cereja</p>
@@ -174,9 +173,7 @@
                                     <div class="d-flex justify-content-between mb10">
                                         <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Siciliana</h3>
 
-                                        <div class="align-self-center">
-                                            <strong class="text-white font700">R$37,00</strong>
-                                        </div>
+                                        
                                     </div>
 
                                     <p class="mb-0">mussarela ou catupiry, champignon, bacon</p>
