--- a/index.html
+++ b/index.html
@@ -2204,7 +2204,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Galeria</h2>
-          <p>Algumas de nossas fotos</p>
+          <p>Nossas fotos</p>
         </div>
       </div>
 
