--- a/index.html
+++ b/index.html
@@ -1985,7 +1985,7 @@
                   <img src="assets/img/event-birthday.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Birthday Parties</h3>
+                  <h3>Chopps e Porções</h3>
                   <div class="price">
                     <p><span>$189</span></p>
                   </div>
@@ -2012,7 +2012,7 @@
                   <img src="assets/img/event-private.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Private Parties</h3>
+                  <h3>Refeições</h3>
                   <div class="price">
                     <p><span>$290</span></p>
                   </div>
@@ -2039,7 +2039,7 @@
                   <img src="assets/img/event-custom.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Custom Parties</h3>
+                  <h3>Drinks e Sucos</h3>
                   <div class="price">
                     <p><span>$99</span></p>
                   </div>
