--- a/index.html
+++ b/index.html
@@ -2489,7 +2489,7 @@
 
           <div class="col-lg-6 col-md-6 footer-newsletter">
             <h4>Receba nossas novidades</h4>
-            <p>Deixe seu email e lhe enviaremos todas as novidades e promoções semanais</p>
+            <p>Deixe seu email e lhe enviaremos todas as novidades e promoções</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Inscrever">
             </form>
