--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <!--Content -->
                             <div class="media-body align-self-center g-pl-10">
                                 <div class="d-flex justify-content-between mb10">
-                                    <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Calabresa</h3>
+                                    <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Caalabresa</h3>
 
                                     
                                 </div>
@@ -281,7 +281,7 @@
                           <!--Content -->
                           <div class="media-body align-self-center g-pl-10">
                               <div class="d-flex justify-content-between mb10">
-                                  <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Calabresa Catupiry</h3>
+                                  <h3 class="align-self-center text-capitalize mb0 h6 text-white font400">Calabresa e Catupiry</h3>
 
                                   
                               </div>
