--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                 
                             </div>
 
-                            <p class="mb-0">muçarela, calabresa moída, cebola e pimenta dedo de moça</p>
+                            <p class="mb-0">mussarela, calabresa moída, cebola e pimenta dedo de moça</p>
                         </div>
                         <!--/Content -->
                     </article><!--/Article -->
